--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -5,33 +5,33 @@ main: me.p000ison.dreamz.DreamZ
 name: DreamZ
 startup: postworld
 url: http://dev.bukkit.org/server-mods/DreamZ/
-version: '0.1.5'
+version: '0.1.6'
 commands:
   dreamz:
     description: Basic Command.
     usage: /<command>
 permissions:
   dreamz.enter:
-    description: tmp
+    description: Allows you to enter a dream.
   dreamz.command.reload:
-    description: tmp
+    description: Allows you to use the command /dreamz reload to reload the config.
   dreamz.command.dwbed:
-    description: tmp
+    description: Allows you to use the command /dreamz dwbed to set the bed in DreamWorld to escape.
   dreamz.command.nmbed:
-    description: tmp
+    description: Allows you to use the command /dreamz dwbed to set the bed in NightMare to escape.
   dreamz.command.wakeup:
-    description: tmp
+    description: Allows you to use the command /dreamz wakeup to escape from the dreamworld.
   dreamz.command.sleep:
-    description: tmp
+    description: Allows you to use the command /dreamz sleep to enter the dream.
   dreamz.escape.damage:
-    description: tmp
+    description: Allows you to escape throw damage cause.
   dreamz.fly:
-    description: tmp
+    description: Allows you to fly.
   dreamz.join.noteleportback:
-    description: tmp
+    description: If you have this permission you wont get teleported back, when you enter this world after a reconnect when the timer already has stopped.
     default: false
   dreamz.admin.*:
-    description: tmp
+    description: Default Admin Permissions.
     default: op
     children:
       dreamz.enter: true
@@ -43,7 +43,7 @@ permissions:
       dreamz.escape.damage: true
       dreamz.fly: true
   dreamz.user.*:
-    description: tmp
+    description: Default Player Permissions.
     default: true
     children:
       dreamz.enter: true
