--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -32,6 +32,7 @@ DreamWorld:
             MinX: -100
             MaxZ: 100
             MinZ: -100
+            WorldHeight: 258
     Bed:                     # The Bed to escape
         X: 0
         Y: 70
@@ -61,6 +62,7 @@ NightMare:
             MinX: -100
             MaxZ: 100
             MinZ: -100
+            WorldHeight: 128
     Bed:                     # The Bed to escape
         X: 0
         Y: 70
