--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -8,20 +8,23 @@ url: http://dev.bukkit.org/server-mods/DreamZ/
 version: '0.1.6'
 commands:
   dreamz:
-    description: Basic Command.
-    usage: /<command>
+    description: DreamZ commands
+    usage: |
+           Usage:
+           /<command> setbed <dreamworld|nightmare> - Sets the rescue-bed.
+           /<command> reload  - Reloads the Config.
+           /<command> enter <dreamworld|nightmare> - Forces you to enter a dream.
+           /<command> leave <dreamworld|nightmare> - Forces you to leave a dream.
 permissions:
   dreamz.enter:
     description: Allows you to enter a dream.
   dreamz.command.reload:
     description: Allows you to use the command /dreamz reload to reload the config.
-  dreamz.command.dwbed:
-    description: Allows you to use the command /dreamz dwbed to set the bed in DreamWorld to escape.
-  dreamz.command.nmbed:
-    description: Allows you to use the command /dreamz dwbed to set the bed in NightMare to escape.
-  dreamz.command.wakeup:
+  dreamz.command.set:
+    description: Allows you to use the command /dreamz set to set the bed in a dream.
+  dreamz.command.leave:
     description: Allows you to use the command /dreamz wakeup to escape from the dreamworld.
-  dreamz.command.sleep:
+  dreamz.command.enter:
     description: Allows you to use the command /dreamz sleep to enter the dream.
   dreamz.escape.damage:
     description: Allows you to escape throw damage cause.
@@ -36,10 +39,9 @@ permissions:
     children:
       dreamz.enter: true
       dreamz.command.reload: true
-      dreamz.command.dwbed: true
-      dreamz.command.nmbed: true
-      dreamz.command.wakeup: true
-      dreamz.command.sleep: true
+      dreamz.command.set: true
+      dreamz.command.leave: true
+      dreamz.command.enter: true
       dreamz.escape.damage: true
       dreamz.fly: true
   dreamz.user.*:
